--- a/esx_identity/html/index.html
+++ b/esx_identity/html/index.html
@@ -24,6 +24,10 @@
 				<button id="submit" type="submit">Enregister</button>
 			</form>
 		</div>
+
+		<div id="tag">
+			by ArdentLeKey <br> localhost#2136
+		</div>
 		<script src="script.js" type="text/javascript"></script>
 	</body>
 </html>
